--- a/main.html
+++ b/main.html
@@ -2,90 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drag and Drop Cubes</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f5f5f5;
-    }
-
-    .container {
-      display: grid;
-      grid-template-columns: repeat(4, 100px);
-      grid-gap: 10px;
-      width: 450px;
-      height: 450px;
-      background-color: #ddd;
-      position: relative;
-      border: 2px solid #aaa;
-    }
-
-    .cube {
-      width: 100px;
-      height: 100px;
-      background-color: #3498db;
-      cursor: pointer;
-      transition: transform 0.1s ease;
-    }
-  </style>
+  <title>Click and Drag</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="cube"></div>
-    <div class="cube"></div>
-    <div class="cube"></div>
-    <div class="cube"></div>
+  <div class="items">
+    <div class="item item1">01</div>
+    <div class="item item2">02</div>
+    <div class="item item3">03</div>
+    <div class="item item4">04</div>
+    <div class="item item5">05</div>
+    <div class="item item6">06</div>
+    <div class="item item7">07</div>
+    <div class="item item8">08</div>
+    <div class="item item9">09</div>
+    <div class="item item10">10</div>
+    <div class="item item11">11</div>
+    <div class="item item12">12</div>
+    <div class="item item13">13</div>
+    <div class="item item14">14</div>
+    <div class="item item15">15</div>
+    <div class="item item16">16</div>
+    <div class="item item17">17</div>
+    <div class="item item18">18</div>
+    <div class="item item19">19</div>
+    <div class="item item20">20</div>
+    <div class="item item21">21</div>
+    <div class="item item22">22</div>
+    <div class="item item23">23</div>
+    <div class="item item24">24</div>
+    <div class="item item25">25</div>
   </div>
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      const cubes = document.querySelectorAll('.cube');
-      let selectedCube = null;
-      let offsetX = 0;
-      let offsetY = 0;
 
-      cubes.forEach(cube => {
-        cube.addEventListener('mousedown', (e) => {
-          selectedCube = cube;
-          offsetX = e.clientX - cube.getBoundingClientRect().left;
-          offsetY = e.clientY - cube.getBoundingClientRect().top;
-          document.addEventListener('mousemove', onMouseMove);
-          document.addEventListener('mouseup', onMouseUp);
-        });
-      });
-
-      function onMouseMove(e) {
-        if (selectedCube) {
-          const containerRect = document.querySelector('.container').getBoundingClientRect();
-          let newLeft = e.clientX - offsetX - containerRect.left;
-          let newTop = e.clientY - offsetY - containerRect.top;
-          const containerWidth = containerRect.width;
-          const containerHeight = containerRect.height;
-          const cubeSize = 100;
-          newLeft = Math.max(0, Math.min(containerWidth - cubeSize, newLeft));
-          newTop = Math.max(0, Math.min(containerHeight - cubeSize, newTop));
-          selectedCube.style.transform = `translate(${newLeft}px, ${newTop}px)`;
-        }
-      }
-
-      function onMouseUp() {
-        if (selectedCube) {
-          document.removeEventListener('mousemove', onMouseMove);
-          document.removeEventListener('mouseup', onMouseUp);
-          selectedCube = null;
-        }
-      }
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
