--- a/main.html
+++ b/main.html
@@ -26,7 +26,8 @@
     <div class="item item17">17</div>
     <div class="item item18">18</div>
     <div class="item item19">19</div>
-    <div class="item item20">20</div>
+    <div classThe cube should not move outside the defined area.
+="item item20">20</div>
     <div class="item item21">21</div>
     <div class="item item22">22</div>
     <div class="item item23">23</div>
